# soroscope

./: Cargo.toml
contracts/cross_chain_verifier/src/: lib.rs  test.rs
contracts/emergency_guard/examples/: simple_token.rs
contracts/emergency_guard/src/: lib.rs  test.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/flash_loan_vault/src/: lib.rs  test.rs
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: lib.rs  test.rs
contracts/math/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs
core/: Cargo.toml
core/src/: auth.rs  lib.rs  main.rs  merkle_tree.rs  rpc_provider.rs  simulation.rs
core/src/cache/: mod.rs
web/components/: Resultviewer.tsx  upload-zone.tsx
web/lib/: api.ts  sorobantypes.ts
web/pages/: index.tsx
