[workspace]
resolver = "2"
members = [
    "core",
    "contracts/token",
    "contracts/hello_soroban",
    "contracts/storage_heavy",
    "contracts/liquidity_pool",
    "contracts/cpu_heavy",
    "contracts/cross_call",
    "contracts/cross_chain_payload",
    "contracts/factory",
    "contracts/math",
    "contracts/typed_data_auth",
]
